--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ dist/dynalite_devices-0.1.1.tar.gz
 dist/dynalite_devices-0.1.6.tar.gz
 build/lib/dynalite_devices_lib/__version__.py
 build/lib/dynalite_devices_lib/dynalite_devices.py
+build/lib/dynalite_devices_lib/__version__.py
