--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ dist/dynalite_devices-0.1.6.tar.gz
 build/lib/dynalite_devices_lib/__version__.py
 build/lib/dynalite_devices_lib/dynalite_devices.py
 build/lib/dynalite_devices_lib/__version__.py
+build/lib/dynalite_devices_lib/__version__.py
+build/lib/dynalite_devices_lib/cover.py
+build/lib/dynalite_devices_lib/cover.py
+build/lib/dynalite_devices_lib/cover.py
