--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ build/lib/dynalite_devices_lib/__version__.py
 build/lib/dynalite_devices_lib/cover.py
 build/lib/dynalite_devices_lib/cover.py
 build/lib/dynalite_devices_lib/cover.py
+build/lib/dynalite_devices_lib/__version__.py
