--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ build/lib/dynalite_devices_lib/cover.py
 build/lib/dynalite_devices_lib/cover.py
 build/lib/dynalite_devices_lib/cover.py
 build/lib/dynalite_devices_lib/__version__.py
+build
+dist
