--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ classifier =
 [tool:pytest]
 testpaths = tests
 norecursedirs = .git testing_config
-addopts = --cov=dynalite_devices_lib --cov-report html
+addopts = --cov=dynalite_devices_lib -log_cli=true --cov-report html --log-format="%(asctime)s %(levelname)s %(message)s" --log-date-format="%Y-%m-%d %H:%M:%S"
 
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
