--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,9 @@ classifier =
 [tool:pytest]
 testpaths = tests
 norecursedirs = .git testing_config
-addopts = --cov=dynalite_devices_lib -log_cli=true --cov-report html --log-format="%(asctime)s %(levelname)s %(message)s" --log-date-format="%Y-%m-%d %H:%M:%S"
+addopts = --cov=dynalite_devices_lib -log_cli=true --cov-report html
+log_format = %(asctime)s %(levelname)s %(message)s
+log_date_format = %Y-%m-%d %H:%M:%S
 
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
