--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,5 +41,18 @@ repos:
     rev: "master"  # Use the sha / tag you want to point at
     hooks:
     -   id: mypy
-        args: [--no-strict-optional]
+        args: 
+          - --warn-unused-configs
+          - --disallow-any-generics
+          - --disallow-subclassing-any
+          - --disallow-untyped-calls
+          - --check-untyped-defs
+          # - --disallow-untyped-defs
+          # - --disallow-incomplete-defs
+          - --disallow-untyped-decorators
+          - --warn-redundant-casts
+          - --warn-unused-ignores
+          # - --warn-return-any
+          - --no-implicit-reexport
+          - --strict-equality
         files: ^dynalite_devices_lib/.+\.py$
