--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: stable
+    rev: 23.3.0
     hooks:
       - id: black
         args:
@@ -8,7 +8,7 @@ repos:
           - --quiet
         files: ^(dynalite_devices_lib|tests)/.+\.py$
   - repo: https://github.com/codespell-project/codespell
-    rev: v1.16.0
+    rev: v2.2.2
     hooks:
       - id: codespell
         args:
@@ -16,16 +16,8 @@ repos:
           - --skip="./.*,*.json"
           - --quiet-level=2
         exclude_types: [json]
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.9
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-docstrings==1.5.0
-          - pydocstyle==5.0.2
-        files: ^(dynalite_devices_lib|tests)/.+\.py$
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.6.2
+    rev: 1.7.4
     hooks:
       - id: bandit
         args:
@@ -33,7 +25,7 @@ repos:
           - --format=custom
           - --configfile=tests/bandit.yaml
         files: ^(dynalite_devices_lib|tests)/.+\.py$
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.12.0
     hooks:
       - id: isort
